--- a/main.css
+++ b/main.css
@@ -1,13 +1,19 @@
 @charset "UTF-8";
 /* CSS Document */
 * {
-  box-sizing:border-box;
+  box-sizing:border-box
 }
 
 header {
+  padding:5px;
   width: 100%;
-  height: 200px;
-  background-color: lightgoldenrodyellow;
+  height: 150px;
+  background-color: powderblue;
+  font-size: 39;
+  font-family: tomarik-display-shadow, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
     }
 nav {
   width: 100%;
@@ -16,17 +22,17 @@ nav {
 }
 
 #main_container{
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
-  height: 400px;
-  background-color: beige;
+  height: 500px;
+  background-color: #81D8D0;
 }
 .flex-container{
     display:flex;
     flex-direction: row;
 }
 .article{
-  height: 200px;
+  height: 300px;
 
 }
 
