--- a/main.css
+++ b/main.css
@@ -7,14 +7,15 @@
 header {
   padding:5px;
   width: 100%;
-  height: 150px;
+  height: 120px;
   background-color: powderblue;
-  font-size: 39;
+  font-size: 45;
   font-family: tomarik-display-shadow, sans-serif;
   font-weight: 400;
   font-style: normal;
-
+  text-align: center;
     }
+
 nav {
   width: 100%;
   height: 35px;
@@ -26,15 +27,22 @@ nav {
   margin: 0 auto;
   height: 500px;
   background-color: #81D8D0;
+  border: slategrey 5px solid;
 }
+
 .flex-container{
     display:flex;
     flex-direction: row;
 }
 .article{
   height: 300px;
-
 }
+
+footer{
+  color: white;
+  text-align: center;
+  clear: both;
+	}
 
 @media (max-width: 800px) {
   .flex-container {
