--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ nav {
 #main_container{
   width: 90%;
   margin: 0 auto;
+  padding: 10px;
   height: 500px;
   background-color: #81D8D0;
   border: slategrey 5px solid;
