--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ nav {
   width: 90%;
   margin: 0 auto;
   padding: 10px;
-  height: 500px;
+  height: 550px;
   background-color: #81D8D0;
   border: slategrey 5px solid;
 }
@@ -37,6 +37,9 @@ nav {
 }
 .article{
   height: 300px;
+  width: 200%;
+  margin: 5px;
+  padding: 10px;
 }
 
 footer{
